Fix layout bug

--- a/ess-be/src/main/resources/static/css/style.css
+++ b/ess-be/src/main/resources/static/css/style.css
@@ -5,7 +5,7 @@
     top: 50px;
 }
 .desktop{
-    display: block;
+    /*display: block;*/
 }
 .mobile{
     display: none;
@@ -17,10 +17,12 @@
 }
 .side-bar{
     height: 100vh;
-    /*position: fixed;*/
     background-color: #2986c2;
     width:200px;
     margin-right: 200px;
+    margin-top: 50px;
+    position: fixed;
+    z-index: 10000;
 }
 .menu{
     width: 100%;
@@ -40,12 +42,12 @@ h1{
     padding-bottom: 15px;
 }
 header{
+    position: fixed;
+    z-index: 10000;
     background-color: #2986c2;
     width: 100vw;
     height: 50px;
     line-height: 50px;
-    position: fixed;
-    z-index: 10000;
 }
 a{
     text-decoration: none;
